...
                          .frame(width: 200, height: 45, alignment: .center)
                          .background(Color.blue)
                          .foregroundColor(Color.white)
                          .cornerRadius(8)
                  })
                  
                  NavigationLink("Create account", destination: Signup())
                      .padding()
                  
                      
              }
              .padding(20)
              .navigationBarTitle("Login Screen")
...
